Added manifest file and helm-chart for Backend

--- a/task/backend-deployment.yaml
+++ b/task/backend-deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-api
+  name: be-app
   namespace: default
   labels:
-    app: backend-api
+    app: be-app
 spec:
   type: NodePort
   ports:
@@ -13,12 +13,12 @@ spec:
     targetPort: 8081
     nodePort: 30037
   selector:
-    app: backend-api
+    app: be-app
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend-api
+  name: be-app
   namespace: default
 spec:
   strategy:
@@ -29,26 +29,18 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: backend-api
+      app: be-app
   template:
     metadata:
       labels:
-        app: backend-api
+        app: be-app
     spec:
 #      imagePullSecrets:
 #      - name: ap-southeast-1-ecr-registry
-#      nodeSelector:
-#        prod: "backend"
-#      tolerations:
-#      - key: "prod"
-#        operator: "Equal"
-#        value: "backend"
-#        effect: "NoSchedule"
       containers:
-      - name: backend-api
-        image: backend-task/get-user-name:latest
-#        command: ["java","-jar","/app.jar"]
-        imagePullPolicy: Never
+      - name: be-app
+        image: viraj/be-get-user-name:latest
+        imagePullPolicy: Always
         readinessProbe:
           httpGet:
             path: /
@@ -75,4 +67,3 @@ spec:
         env:
           - name: "NAME"
             value: "Viraj"
-
